fix warnings from CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 export(fread2)
 export(hd)
+export(include_graphics2)
+export(is_docx_output)
+export(is_newer)
 export(kmeansp2)
 export(kmeansp3)
 export(mycolors)
@@ -23,6 +26,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
 importFrom(dplyr,select)
 importFrom(forcats,fct_relevel)
+importFrom(grDevices,col2rgb)
 importFrom(pipeR,"%>>%")
 importFrom(purrr,map2)
 importFrom(purrr,pmap)
@@ -33,6 +37,11 @@ importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
 importFrom(rlang,UQ)
 importFrom(rlang,set_names)
+importFrom(rsvg,rsvg_pdf)
+importFrom(rsvg,rsvg_png)
+importFrom(stats,kmeans)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_extract_all)
+importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(tidyr,gather)
