--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,17 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
 Depends: R(>= 2.10.0)
-Imports: grid,
-    stringr,
-    rmarkdown,
-    data.table,
+Imports: data.table,
+    dplyr,
+    forcats,
+    grid,
+    knitr,
+    pipeR,
+    purrr,
     readxl,
     readODS,
-    pipeR,
-    readr
+    readr,
+    rlang,
+    rsvg,
+    stringr,
+    tidyr
