new: wrappers of devtools functions
load_all() and test() use here::here() as an implicit default directory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(is_docx_output)
 export(is_newer)
 export(kmeansp2)
 export(kmeansp3)
+export(load_all)
 export(mycolors)
 export(norm_geochem)
 export(q)
@@ -15,17 +16,21 @@ export(read_tbl)
 export(references)
 export(regex_or)
 export(rss)
+export(test)
 export(tfread)
 export(tread_excel)
 export(tread_ods)
 importFrom(data.table,as.data.table)
 importFrom(data.table,fread)
+importFrom(devtools,load_all)
+importFrom(devtools,test)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
 importFrom(dplyr,select)
 importFrom(forcats,fct_relevel)
 importFrom(grDevices,col2rgb)
+importFrom(here,here)
 importFrom(pipeR,"%>>%")
 importFrom(purrr,map2)
 importFrom(purrr,pmap)
