--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,15 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Depends: R(>= 2.10.0)
-Imports: data.table,
+Imports: 
+    scales,
+    data.table,
+    here,
     dplyr,
     forcats,
     grid,
     knitr,
+    png,
     pipeR,
     purrr,
     readxl,
@@ -23,5 +27,6 @@ Imports: data.table,
     readr,
     rlang,
     rsvg,
+    scales,
     stringr,
     tidyr
