feat: Q as quick q()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(binning,default)
 S3method(binning,qm_xmap)
 S3method(map2png,default)
 S3method(map2png,qm_xmap)
+S3method(print,no)
+export(Q)
 export(binning)
 export(fread2)
 export(include_graphics2)
@@ -14,7 +16,6 @@ export(kmeansp3)
 export(map2png)
 export(mycolors)
 export(norm_geochem)
-export(q)
 export(read_excel2)
 export(read_ods2)
 export(read_tbl)
